src/App.css
.App {
  text-align: center;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 80px;
}

.App-header {
  background-color: #222;
  height: 150px;
  padding: 20px;
  color: white;
}

.App-intro {
  font-size: large;
}

@keyframes App-logo-spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}
@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');


/*Colors:
*Main Orange: #ff5500
*Shadow Orange: #d04702
*Dark Grey: #333
*
*/

@media (max-width: 600px) {
  .score .score-input {
    width: 70%;
  }
}
@font-face {
  font-family: EASans;
  src: url(./fonts/EASansCurves-Regular.ttf);
}
html {
  overflow-y: scroll;
}
html, body, #app {
  height: 100%;
  min-height: 100%;
}
body {
  background: #f2f2f2;
  margin: 0;
  color: #333;
  font-family: 'Open Sans', sans-serif !important;
  /*height: 100%;*/
}
h1 {
  font-size: 2.5em;
  margin-top: 0;
}
h2 {
  margin-bottom: 5px;
  margin-top: 5px;
  /*margin-top: 45px;*/
}
button {
  font-family: 'Open Sans', sans-serif !important;
}
button > a {
  color: white;
  text-decoration: none;
}
.app {
  margin: 0 auto;
  max-width: 650px;
  background: white;
  padding: 20px;
  min-height: 100vh;
  height: 100%;
  box-sizing: border-box;
  -webkit-overflow-scrolling: touch;
  /*position: relative;*/
}
.ea-font {
  font-family: EASans;
  letter-spacing: 3px;
}
.back {
  margin-bottom: 0;
  color: #333;
  font-size: 1.5em;
  /*transition: all .1s ease;*/
}
.back > h2 {
  margin: 0;
}
.back i {
  margin-bottom: 0;
}
.back > h2 > a > i:hover {
  color: rgb(255, 85, 0);
}
.submit-container {
  width: 100%;
  padding-top: 20px;
  font-weight: 800;
}
.submit-result {
  display: block;
  width: 100%;
  padding-top: 10px;
  padding-bottom: 10px;
  border: none;
  background: #ff5500;
  color: white;
  /*transition: all .22s ease;*/
  font-size: 2em;
  border-bottom: solid 4px #d04702;
  margin-top: 0;
  text-decoration: none;
  /*margin-bottom: 45px;*/
  text-align: center;
  font-family: 'Open Sans', sans-serif;
  font-weight: 800;
}
.submit-result:hover {
  margin-top: 2px;
  border-bottom-width: 2px;
  /*margin-bottom: px;*/
}
.submit-result:active {
  margin-top: 4px;
  border-bottom-width: 0px;
}
.submit-result > a, .sumbit-result > a:hover {
  color: white;
  text-decoration: none;
  display: block;
}
/*iPhone 4*/
@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 2/3) and (orientation:portrait)
{
    h1 {
      font-size: 2em;
    }
}

/*Match submission form*/
.error {
  border: 1px solid red !important;
  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
  transform: translate3d(0, 0, 0);
}
.shake {

}
.submit-name > h1 {
  margin-bottom: 0px;
}
.form > h2, .form > h1 {
  margin-top: 0;
}
.winner-select > h2 {
  margin-top: 0;
}
.loser-select > h2 {
  margin-top: 15px;
}
.score-form > h2 {
  margin-top: 15px;
  margin-bottom: 0;
}
.submit-form {
  width: 100%;
  margin: 0 auto;
  text-align: center;
}
.submit-form > select {
  width: 28%;
  height: 30px;
}
.submit-button {
  width: 100%;
  padding-top: 10px;
  padding-bottom: 10px;
  border: none;
  background: #ff5500;
  color: white;
  /*transition: all .22s ease;*/
  font-size: 2em;
  font-weight: 800;
  border-bottom: solid 4px #d04702;
  margin-top: 0;
  cursor: pointer;
}
.submit-button:hover {
  margin-top: 2px;
  border-bottom-width: 2px;
}
.submit-button:active {
  margin-top: 4px;
  border-bottom-width: 0px;
}
.form {
  margin-bottom: 17px;
}
.winner-loser {
  display: flex;
}
.select {
  flex-basis: 0;
  flex-grow: 1;
  text-align: center;
}
.score-form {
  text-align: center;
}
.match-score {
}
.letters {
  display: flex;
}
.w, .l {
  flex-basis: 0;
  flex-grow: 1;
  display: block;
  margin: auto;
  text-align: center;
}
.w > h2, .l > h2 {
  margin-top: 15px;
}
.splitter {
  flex-grow: 2;
  flex-basis: 0;
}
.score {
  display: flex;
}
.win-score {
  top: 0;
  left: 0;
  text-align: center;
  flex-grow: 1;
  flex-basis: 0;
}
.lose-score {
  top: 0;
  left: 0;
  text-align: center;
  flex-grow: 1;
  flex-basis: 0;
}
.score-input {
  font-size: 1.5em;
  width: 30%;
  text-align: center;
  flex-grow: 1;
  flex-basis: none;
  border: 1px solid #333;
  box-shadow: 0 0 0px #d04702;
  transition: all 0.1s ease;
}
.score-input:focus {
  outline: none;
  border: 1px solid #ff5500;
  box-shadow: 0 0 5px #d04702;
}
input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
.connector {
  stroke: black;
  stroke-width: 2px;
}
.winner {
  padding-right: 5.5%;
}
.loser {
  padding-left: 5.5%;
}
.w > h2, .l > h2 {
  color: grey;
  margin-bottom: 0;
}
.loser-select {
  margin-top: 0;
}
label > select, label > select {
  width: 50%;
  font-size: 1.2em;
  border-radius: 0px !important;
  background: white !important;
  -webkit-appearance: none;
  padding: 7px;
  text-align: center;
  text-align-last: center;
  border: 1px solid #333;
  position: relative;
  height: 7%;
  box-shadow: 0 0 0px #d04702;
  transition: all 0.1s ease;
}
label > select:focus, label > select:focus {
  /*outline: 1px inset #ff5500;
  outline-offset: -1px;*/
  outline: none;
  border: 1px solid #ff5500;
  box-shadow: 0 0 5px #d04702;
}
label {
  position: relative;
  height: 100%;
}
label:after {
    content: "\f078";
    font-family: "FontAwesome";
    font-size: 11px;
    color: #333;
    right: 8px;
    top: 2px;
    padding: 0 0 4px;
    position: absolute;
    pointer-events: none;
}
.password-container {
  text-align: center;
  padding-bottom: 3%;
}
.password-header {
  margin-top: 0;
  margin-bottom: 5px;
}
.password {
  width: 50%;
  margin: 0 auto;
  font-size: 1.7em;
  text-align: center;
  border: 1px solid #333;
  box-shadow: 0 0 0px #d04702;
  transition: all 0.1s ease;
}
.password:focus {
  outline: none;
  border: 1px solid #ff5500;
  box-shadow: 0 0 5px #d04702;
}
.submit-success {
  position: fixed;
  margin: 0 auto;
  width: 55%;
  height: 25%;
  text-align: center;
  left: 0;
  right: 0;
  top: 25%;
  z-index: 10;
  background: white;
  pointer-events: none;
  display: table;
  border: 4px solid #333;
}
.submit-success h3 {
  display: table-cell;
  vertical-align: middle;
}
/*Leaderboard*/
.leaderboard {
  width: 100%;
  margin-top: 45px;
}
.row, .leaderboard-header {
  display: flex;
  width: 100%;
}
.leaderboard-header {
  color: white;
  background: rgb(255, 85, 0);
  font-weight: 700;
}
.leaderboard-item {
  text-align: left;
  flex-basis: 0;
  padding: 5px;
}
.leaderboard-header-item {
  text-align: left;
  flex-basis: 0;
  padding: 5px;
}
.position {
  flex-grow: 1;
  text-align: center;
}
.name {
  flex-grow: 2;
}
.name > a {
  text-decoration: none;
  color: #333;
}
.leaderboard-header-item > a {
  text-decoration: none;
  color: white;
}
.wins {
  flex-grow: 1.2;
}
.losses {
  flex-grow: 1.5;
}
.elo {
  flex-grow: 1;
}
.one-week {
  flex-grow: 1;
}
.row {
  background: #e2e2e2;
}
.row:nth-child(even) {
  background: #f8f8f8;
}
.increasing {
  color: rgb(57, 181, 62);
}
.decreasing {
  color: red;
}

/*User detail*/
.detail-name {
  margin-bottom: 0;
}
.detail-name > h1 {
  margin-bottom: 0;
}
.elo-chart {
  /*min-width: 300px;
  min-height: 150px;*/
  /*background: grey;*/
  margin: 0 auto;
  /*font-weight: 600;*/
  /*position: inherit;*/
  max-height: 400px;
}
/*.axis {
  color: #333;
  stroke: #333;
}*/
.elo-chart svg {
  max-height: 400px;
}
g > text {
  font-size: 1.2em;
  font-family: 'Open Sans', sans-serif;
  color: #333;
}
.line {
    fill: none;
    stroke: #333;
    stroke-width: 1.5px;
    shape-rendering: geometricPrecision;
    /*stroke-antialiasing: true;*/
}
.point {
  fill: #333;
  stroke: transparent;
  stroke-width: 2px;
}
div.tooltip {
  position: absolute;
  text-align: center;
  /*width: 60px;*/
  padding: 5px;
  /*font: 12px sans-serif;*/
  background: black;
  border: 0px;
  border-radius: 0;
  pointer-events: none;
  color: white;
}
.row, .recent-game-header {
  display: flex;
  width: 100%;
}
.recent-game-header {
  color: white;
  background: rgb(255, 85, 0);
  font-weight: 700;
}
.recent-games {
  margin-bottom: 15px;
}
.recent-game-header-item {
  text-align: left;
  flex-basis: 0;
  padding: 5px;
  flex-grow: 1;
}
.recent-game-item {
  text-align: left;
  flex-basis: 0;
  padding: 5px;
  flex-grow: 1;
}
.recent-game-result {
  font-weight: 700;
  padding-left: 20px;
}
.recent-game-vs > a {
    text-decoration: none;
    color: #333;
}
/*Transitions*/
.pageSlide-enter {
  opacity: 0;
  transform: translate(100%);
}
.pageSlide-enter.pageSlide-enter-active {
  opacity: 1;
  transform: translate(0%);
  transition: all 300ms ease-in-out;
}
.pageSlide-leave {
  opacity: 1;
  transform: translate3(0%);
}
.pageSlide-leave.pageSlide-leave-active {
  opacity: 0;
  transform: translate(-100%);
  transition: all 200ms ease-in-out;
}
.reversePageSlide-enter {
  opacity: 0;
  transform: translate(-100%);
}
.reversePageSlide-enter.reversePageSlide-enter-active {
  opacity: 1;
  transform: translate(0%);
  transition: all 300ms ease-in-out;
}
.reversePageSlide-leave {
  opacity: 1;
  transform: translate3(0%);
}
.reversePageSlide-leave.reversePageSlide-leave-active {
  opacity: 0;
  transform: translate(100%);
  transition: all 200ms ease-in-out;
}
/*ANIMATIONS*/
/*Error*/
@keyframes shake {
  10%, 90% {
    transform: translate3d(-1px, 0, 0);
  }

  20%, 80% {
    transform: translate3d(2px, 0, 0);
  }

  30%, 50%, 70% {
    transform: translate3d(-4px, 0, 0);
  }

  40%, 60% {
    transform: translate3d(4px, 0, 0);
  }
}
/*Spinner*/
.loader {
  border: 3px solid #f8f8f8; /* Light grey */
  border-top: 3px solid #ff5500;
  border-radius: 50%;
  width: 35px;
  height: 35px;
  animation: spin .7s linear infinite;
  margin: 0 auto;
  margin-top: 30px;
}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

